# TED

./: Cargo.toml  README.md
ted-buffer/: Cargo.toml
ted-buffer/src/: highlights.rs  lib.rs  provider.rs  utils.rs
ted-cli/: Cargo.toml
ted-cli/src/: args.rs  colors.rs  main.rs
ted-config/: Cargo.toml
ted-config/src/: config.rs  lib.rs  watch.rs
ted-core/: Cargo.toml
ted-events/: Cargo.toml
ted-fs/: Cargo.toml
ted-fs/src/: events.rs  file.rs  filesystem.rs  folder.rs  item.rs  lib.rs
ted-matcher/: Cargo.toml
ted-matcher/src/: lib.rs  matchers.rs  modes.rs
ted-matcher/src/matchers/: file.rs  grep.rs
ted-tui/: Cargo.toml
ted-tui/src/: app.rs  layouts.rs  lib.rs  state.rs  utils.rs  widgets.rs
ted-tui/src/layouts/: drawers.rs  panes.rs
ted-tui/src/panes/: split.rs
ted-tui/src/widgets/: border.rs  file.rs  filetree.rs  finder.rs  home.rs
ted-tui/src/widgets/filetree/: item.rs  recurse.rs
