[workspace]
resolver = "3"
members = ["ted-cli", "ted-config", "ted-fs", "ted-matcher", "ted-tui"]

default-members = ["ted-cli"]

[workspace.dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ignore = "0.4.26"
log = "0.4.29"
notify-debouncer-full = "0.7.0"
nucleo = "0.5.0"
ratatui = "0.30.0"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
slotmap = "1.1.1"
tokio = { version = "1.50.0", features = ["full"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
