[workspace]
resolver = "3"
members = [
  "ted-cli",
  "ted-config",
  "ted-fs",
  "ted-matcher",
  "ted-buffer",
  "ted-tui",
]

default-members = ["ted-cli"]

[workspace.dependencies]
boxcar = "0.2.14"
crossterm = { version = "0.29.0", features = ["event-stream"] }
devicons = "0.6.12"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
hex_color = "3.0.0"
ignore = "0.4.26"
log = "0.4.29"
notify-debouncer-full = "0.7.0"
nucleo = "0.5.0"
ratatui = "0.30.0"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
slotmap = "1.1.1"
streaming-iterator = "0.1.9"
tokio = { version = "1.50.0", features = ["full"] }
tree-sitter = "0.26.9"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
