[package]
name = "ted-matcher"
version = "0.1.0"
edition = "2024"

[dependencies]
boxcar.workspace = true
devicons.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
log.workspace = true
nucleo.workspace = true
tokio.workspace = true
ropey.workspace = true
ted-fs.path = "../ted-fs"
