[package]
name = "ted-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
crossterm.workspace = true
hex_color.workspace = true
log.workspace = true
nucleo.workspace = true
ratatui.workspace = true
ropey.workspace = true
slotmap.workspace = true
tokio.workspace = true
ted-buffer.path = "../ted-buffer"
ted-config.path = "../ted-config"
ted-matcher.path = "../ted-matcher"
ted-fs.path = "../ted-fs"
enum-map = "2.7.3"
